add get user info handler
