# pkg/response.go
@@ -11,3 +11,10 @@ type LoginResponse struct {
 	Message  string `json:"message"`
 	Username string `json:"username"`
 }
+
+type UserInfoResponse struct {
+	Code int `json:"code"`
+	Message string `json:"message"`
+	Email string `json:"email"`
+	Username string `json:"username"`
+}
